style.css
:root {
  color-scheme: light dark;
  supported-color-schemes: light dark;
}

body,
.mail-body {
  background-color: #FFFFFF;
}

.header {
  background-color: #FFFFFF;
  border-top: 8px solid #0066CC;
}

.section {
  background-color: #FFFFFF;
}

.title div {
  color: #17324D !important;
}

.text div {
  color: #17324D !important;
}

.caption,
.caption div {
  color: #5C6F82 !important;
}

.key,
.key div {
  color: #5C6F82 !important;
}

.value,
.value div {
  color: #17324D !important;
}

.mail-address,
.mail-address div {
  word-break: break-all;
  color: #17324D !important;
}

.mobile {
  display: block;
}

.desktop {
  display: none;
}

h4 {
  margin: 0px;
}

p {
  margin-top: 0px;
  margin-bottom: 0px;
}

.link {
  color: #0066cc !important;
}

@media (prefers-color-scheme: light) {

  .dark-img,
  [data-ogsc] .dark-img {
    display: none !important;
    mso-hide: all !important;
  }

  .light-img,
  [data-ogsc] .light-img {
    display: block;
    display: block !important;
  }
}

@media (min-width: 600px) {

  body,
  .mail-body {
    background-color: #e6e9f2;
  }

  .mobile {
    display: none;
  }

  .desktop {
    display: block;
  }
}

@media (prefers-color-scheme: dark) {

  body,
  .mail-body {
    background-color: #000000;
  }

  .header {
    background-color: #323232;
    border-top: 8px solid #3da2ff;
  }

  .section {
    background-color: #323232;
  }

  .title div {
    color: #ffffff !important;
  }

  .text div {
    color: #eeeeee !important;
  }

  .caption,
  .caption div {
    color: #eeeeee !important;
  }

  .key,
  .key div {
    color: #eeeeee !important;
  }

  .value,
  .value div {
    color: #ffffff !important;
  }

  .mail-address,
  .mail-address div {
    color: #ffffff !important;
  }

  .link {
    color: #3da2ff !important;
  }

  /* IMAGES */
  /* Source: https://www.litmus.com/blog/the-ultimate-guide-to-dark-mode-for-email-marketers/ */

  .dark-img,
  [data-ogsc] .dark-img {
    display: block !important;
    overflow: visible !important;
    float: none !important;
    max-height: inherit !important;
    max-width: inherit !important;
    line-height: auto !important;
    margin-top: 0px !important;
    visibility: inherit !important;
  }

  .light-img,
  [data-ogsc] .light-img {
    display: none;
    display: none !important;
    mso-hide: all !important;
  }
}

